latest changes & azure-pipelines

--- a/crypto-back/src/main/resources/application.properties
+++ b/crypto-back/src/main/resources/application.properties
@@ -30,6 +30,6 @@ files.basic-folder-path=/
 spring.profiles.active=dev,docker
 
 # Main Account
-main-account.email=Admin@ucrypt.com
+main-account.email=Admin@uranus.com
 main-account.password=g8rD%+
 
