--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,11 @@ pool:
 jobs:
 - job: BackendBuild
   displayName: 'Build Backend'
-  variables: # Comment in case of Azure DevOps Microsoft build agent
-      - name: JAVA_HOME_17_X64
-        value: /usr/lib/jvm/java-17-openjdk-amd64
-      - name: JAVA_HOME
-        value: /usr/lib/jvm/java-17-openjdk-amd64
+  #variables: # Comment in case of Azure DevOps Microsoft build agent
+      #- name: JAVA_HOME_17_X64
+      #  value: /usr/lib/jvm/java-17-openjdk-amd64
+      #- name: JAVA_HOME
+      #  value: /usr/lib/jvm/java-17-openjdk-amd64
   steps:
   # Uncomment in case of Azure DevOps Microsoft build agent
   # - task: JavaToolInstaller@0 
