Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,10 @@ jobs:
   steps:
   - task: Docker@2
     inputs:
+      containerRegistry: 'dockerHubReg'
+      command: 'login'
+  - task: Docker@2
+    inputs:
       containerRegistry: 'dockerHubReg' ## TODO Azure Container Registry 
       repository: 'backend'
       command: 'build'
