--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,18 +10,7 @@ pool:
 jobs:
 - job: BackendBuild
   displayName: 'Build Backend'
-  #variables: # Comment in case of Azure DevOps Microsoft build agent
-      #- name: JAVA_HOME_17_X64
-      #  value: /usr/lib/jvm/java-17-openjdk-amd64
-      #- name: JAVA_HOME
-      #  value: /usr/lib/jvm/java-17-openjdk-amd64
   steps:
-  # Uncomment in case of Azure DevOps Microsoft build agent
-  # - task: JavaToolInstaller@0 
-  #   inputs: 
-  #     versionSpec: '17'
-  #     jdkArchitectureOption: 'x64'
-  #     jdkSourceOption: 'PreInstalled'
   - task: Maven@3
     inputs:
       mavenPomFile: 'crypto-back/pom.xml'
@@ -57,7 +46,7 @@ jobs:
   steps:
   - task: Docker@2
     inputs:
-      containerRegistry: 'dockerHubReg' ## TODO Azure Container Registry 
+      containerRegistry: 'dockerHubReg' 
       repository: 'itraore/ucrypt.docker'
       command: 'buildAndPush'
       Dockerfile: 'crypto-back/Dockerfile'
@@ -66,7 +55,7 @@ jobs:
 
   - task: Docker@2
     inputs:
-      containerRegistry: 'dockerHubFront' ## TODO Azure Container Registry 
+      containerRegistry: 'dockerHubFront' 
       repository: 'itraore/ucryptfront.docker'
       command: 'buildAndPush'
       Dockerfile: 'UCryptPortal/Dockerfile'
