--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ jobs:
   - task: Docker@2
     inputs:
       containerRegistry: 'DocHubBack' 
-      repository: 'itraore/ucrypt.back'
+      repository: 'xxx/yyy.back'
       command: 'buildAndPush'
       Dockerfile: 'crypto-back/Dockerfile'
       tags: 'latest'
@@ -56,7 +56,7 @@ jobs:
   - task: Docker@2
     inputs:
       containerRegistry: 'DocHubFront' 
-      repository: 'itraore/ucrypt.front'
+      repository: 'xxx/zzz.front'
       command: 'buildAndPush'
       Dockerfile: 'UCryptPortal/Dockerfile'
       tags: 'latest'
