--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,8 +46,8 @@ jobs:
   steps:
   - task: Docker@2
     inputs:
-      containerRegistry: 'DocHubBack' 
-      repository: 'xxx/yyy.back'
+      containerRegistry: 'ucrypt_back_DR'
+      repository: 'sleepsleep1000/backend'
       command: 'buildAndPush'
       Dockerfile: 'crypto-back/Dockerfile'
       tags: 'latest'
@@ -55,8 +55,8 @@ jobs:
 
   - task: Docker@2
     inputs:
-      containerRegistry: 'DocHubFront' 
-      repository: 'xxx/zzz.front'
+      containerRegistry: 'ucrypt_front_DR'
+      repository: 'sleepsleep1000/frontend'
       command: 'buildAndPush'
       Dockerfile: 'UCryptPortal/Dockerfile'
       tags: 'latest'
