--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,46 +3,30 @@ pool:
   demands: maven
 
 jobs:
-  # - job: SonarQubePreparationandBackendBuild
-  #   displayName: "SonarQube Preparation and Backend Build"
-  #   steps:
-  #     - task: SonarQubePrepare@5
-  #       inputs:
-  #         SonarQube: sonarQube
-  #         scannerMode: "Other"
-  #         extraProperties: |
-  #           # Additional properties that will be passed to the scanner,
-  #           # Put one key=value per line, example:
-  #           # sonar.exclusions=**/*.bin
-  #           sonar.projectKey=ucrypt
-  #           sonar.projectName=ucrypt
-  #     - task: Maven@4
-  #       displayName: BackendBuild
-  #       inputs:
-  #         mavenPomFile: "crypto-back/pom.xml"
-  #         goals: "package -DskipTests"
-  #         publishJUnitResults: false
-  #         javaHomeOption: "JDKVersion"
-  #         jdkVersionOption: "1.17"
-  #         jdkArchitectureOption: "x64"
-  #         mavenOptions: "-Xmx3072m"
-  #         sonarQubeRunAnalysis: true
-  #     - task: SonarQubePublish@5
-  #       inputs:
-  #         pollingTimeoutSec: "300"
-  - job: testing
-    displayName: "Testing"
-    # dependsOn: SonarQubePreparationandBackendBuild
+  - job: SonarQubePreparationandBackendBuild
+    displayName: "SonarQube Preparation and Backend Build"
     steps:
-      - task: Maven@4
-        displayName: BackendTest
+      - task: SonarQubePrepare@5
         inputs:
-          mavenPomFile: "testing/pom.xml"
-          goals: "test"
-          publishJUnitResults: true
+          SonarQube: sonarQube
+          scannerMode: "Other"
+          extraProperties: |
+            # Additional properties that will be passed to the scanner,
+            # Put one key=value per line, example:
+            # sonar.exclusions=**/*.bin
+            sonar.projectKey=ucrypt
+            sonar.projectName=ucrypt
+      - task: Maven@4
+        displayName: BackendBuild
+        inputs:
+          mavenPomFile: "crypto-back/pom.xml"
+          goals: "package -DskipTests"
+          publishJUnitResults: false
           javaHomeOption: "JDKVersion"
           jdkVersionOption: "1.17"
           jdkArchitectureOption: "x64"
           mavenOptions: "-Xmx3072m"
-          sonarQubeRunAnalysis: false
-          testResultsFiles: "**/surefire-reports/TEST-*.xml"
+          sonarQubeRunAnalysis: true
+      - task: SonarQubePublish@5
+        inputs:
+          pollingTimeoutSec: "300"
